--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
           class="form"
           name="query"
           id="searchQuery"
-          placeholder="Search country name"
+          placeholder="enter country name "
         />
+        <ul class="articles js-countries"></ul>
   </body>
 </html>
